--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve  -serveconfig",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "dateformat": "^3.0.3",
+    "element-ui": "^2.13.0",
     "register-service-worker": "^1.6.2",
+    "superagent": "^5.2.2",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.2",
     "vue-property-decorator": "^8.3.0",
@@ -35,6 +38,9 @@
     "geckodriver": "^1.19.1",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
+    "pug": "^2.0.4",
+    "pug-loader": "^2.4.0",
+    "pug-plain-loader": "^1.0.0",
     "typescript": "~3.7.5",
     "vue-template-compiler": "^2.6.11"
   }
