--- a/package.json
+++ b/package.json
@@ -13,17 +13,22 @@
     "core-js": "^3.6.4",
     "dateformat": "^3.0.3",
     "element-ui": "^2.13.0",
+    "file-saver": "^2.0.2",
     "register-service-worker": "^1.6.2",
     "superagent": "^5.2.2",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.2",
     "vue-property-decorator": "^8.3.0",
     "vue-router": "^3.1.5",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "xlsx": "^0.15.6"
   },
   "devDependencies": {
     "@types/chai": "^4.2.8",
+    "@types/dateformat": "^3.0.1",
+    "@types/file-saver": "^2.0.1",
     "@types/mocha": "^5.2.4",
+    "@types/superagent": "^4.1.7",
     "@vue/cli-plugin-babel": "~4.2.0",
     "@vue/cli-plugin-e2e-nightwatch": "~4.2.0",
     "@vue/cli-plugin-pwa": "~4.2.0",
@@ -42,6 +47,7 @@
     "pug-loader": "^2.4.0",
     "pug-plain-loader": "^1.0.0",
     "typescript": "~3.7.5",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "worker-loader": "^2.0.0"
   }
 }
